Fixed dark mode button bug and applied new background

--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,6 @@ html,
   -moz-osx-font-smoothing: grayscale;
 }
 
-body * {
-  @apply transition-colors duration-300;
-}
-
 code {
   font-family: 'Outfit', sans-serif;
 }
